--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -27,8 +27,8 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<div class="form-group">
-					<label for="usr">Name:</label> <input type="text"
-						class="form-control" id="usr">
+					<label for="searchbook">Search books:</label> <input type="text"
+						class="form-control" id="searchbook">
 				</div>
 				<article id="api1"></article>
 				<script>
@@ -52,35 +52,35 @@
 																+ msg.documents[0].title);
 										$("#api1")
 												.append(
-														"<br /><br /> image: <img src='"+msg.documents[0].thumbnail+"'/>");
+														" image: <img src='"+msg.documents[0].thumbnail+"'/>");
 										$("#api1")
 												.append(
 														"<br /><br /> title: "
 																+ msg.documents[1].title);
 										$("#api1")
 												.append(
-														"<br /><br /> image: <img src='"+msg.documents[1].thumbnail+"'/>");
+														" image: <img src='"+msg.documents[1].thumbnail+"'/>");
 										$("#api1")
 												.append(
 														"<br /><br /> title: "
 																+ msg.documents[2].title);
 										$("#api1")
 												.append(
-														"<br /><br /> image: <img src='"+msg.documents[2].thumbnail+"'/>");
+														"< image: <img src='"+msg.documents[2].thumbnail+"'/>");
 										$("#api1")
 												.append(
 														"<br /><br /> title: "
 																+ msg.documents[3].title);
 										$("#api1")
 												.append(
-														"<br /><br /> image: <img src='"+msg.documents[3].thumbnail+"'/>");
+														" image: <img src='"+msg.documents[3].thumbnail+"'/>");
 										$("#api1")
 												.append(
 														"<br /><br /> title: "
 																+ msg.documents[4].title);
 										$("#api1")
 												.append(
-														"<br /><br /> image: <img src='"+msg.documents[4].thumbnail+"'/>");
+														" image: <img src='"+msg.documents[4].thumbnail+"'/>");
 									});
 				</script>
 
