--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -29,6 +29,7 @@
 				<div class="form-group">
 					<label for="searchbook">Search books:</label> <input type="text"
 						class="form-control" id="searchbook">
+					<button type="button" class="btn btn-primary">Primary</button>
 				</div>
 				<article id="api1"></article>
 				<script>
