--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -26,11 +26,16 @@
 				<h3>HOME</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-				<div class="form-group">
-					<label for="searchbook">Search books:</label> <input type="text"
-						class="form-control" id="searchbook">
-					<button type="button" class="btn btn-primary">Primary</button>
-				</div>
+				<form>
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Search Books">
+						<div class="input-group-btn">
+							<button class="btn btn-default" type="submit">
+								<i class="glyphicon glyphicon-search"></i>
+							</button>
+						</div>
+					</div>
+				</form>
 				<article id="api1"></article>
 				<script>
 					$
