--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -28,9 +28,9 @@
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<form>
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Search Books">
+						<input id = "bookName" type="text" class="form-control" placeholder="Search Books">
 						<div class="input-group-btn">
-							<button class="btn btn-default" type="submit">
+							<button id = "searchButton" class="btn btn-default" type="submit">
 								<i class="glyphicon glyphicon-search"></i>
 							</button>
 						</div>
