--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -3,9 +3,72 @@
 <head>
 {{> include/header}}
 <link rel="stylesheet" href="/css/map.css" type="text/css">
+<script>
+
+	function submitFormReady() {
+		$("#searchButton").click(function(){
+			var bookname = $("#bookName").val();
+			alert(bookname);
+			$
+			.ajax(
+					{
+						type : "GET",
+						url : "https://dapi.kakao.com/v3/search/book?target=title",
+						dataType : "json",
+						data : {
+							query: bookname
+						},
+						headers : {
+							Authorization : "KakaoAK e5e613251210cc286e07c17499ed3047"
+						}
+					})
+			.done(
+					function(msg) {
+						$("#api1")
+								.append(
+										"<br /><br /> title: "
+												+ msg.documents[0].title);
+						$("#api1")
+								.append(
+										" image: <img src='"+msg.documents[0].thumbnail+"'/>");
+						$("#api1")
+								.append(
+										"<br /><br /> title: "
+												+ msg.documents[1].title);
+						$("#api1")
+								.append(
+										" image: <img src='"+msg.documents[1].thumbnail+"'/>");
+						$("#api1")
+								.append(
+										"<br /><br /> title: "
+												+ msg.documents[2].title);
+						$("#api1")
+								.append(
+										"< image: <img src='"+msg.documents[2].thumbnail+"'/>");
+						$("#api1")
+								.append(
+										"<br /><br /> title: "
+												+ msg.documents[3].title);
+						$("#api1")
+								.append(
+										" image: <img src='"+msg.documents[3].thumbnail+"'/>");
+						$("#api1")
+								.append(
+										"<br /><br /> title: "
+												+ msg.documents[4].title);
+						$("#api1")
+								.append(
+										" image: <img src='"+msg.documents[4].thumbnail+"'/>");
+					});
+		});
+	}
+	
+				
+				
+				</script>
 </head>
 
-<body>
+<body onload="submitFormReady();">
 
 	{{> include/navigation}}
 	<div class="container">
@@ -26,72 +89,79 @@
 				<h3>HOME</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			<!-- 	<form>
+			 	<form>
 					<div class="input-group">
 						<input id = "bookName" type="text" class="form-control" placeholder="Search Books">
 						<div class="input-group-btn">
-							<button id = "searchButton" class="btn btn-default" type="submit">
+							<button id = "searchButton" class="btn btn-default" type="button">
 								<i class="glyphicon glyphicon-search"></i>
 							</button>
 						</div>
 					</div>
-				</form> -->
-				<input id = "bookName" value="" type="text">
-				<button id = "searchButton">검색</button>
+				</form>
+				<!-- <input id = "bookName" value="" type="text">
+				<button id = "searchButton" >검색</button> -->
 				<article id="api1"></article>
-				<script>
+				<!-- <script>
+				
+				$("#searchButton").click(function(){
+					var bookname = $("#bookName").val();
+					alert(bookname);
 					$
-							.ajax(
-									{
-										type : "GET",
-										url : "https://dapi.kakao.com/v3/search/book?target=title",
-										dataType : "json",
-										data : {
-											query: $("#bookName").val()
-										},
-										headers : {
-											Authorization : "KakaoAK e5e613251210cc286e07c17499ed3047"
-										}
-									})
-							.done(
-									function(msg) {
-										$("#api1")
-												.append(
-														"<br /><br /> title: "
-																+ msg.documents[0].title);
-										$("#api1")
-												.append(
-														" image: <img src='"+msg.documents[0].thumbnail+"'/>");
-										$("#api1")
-												.append(
-														"<br /><br /> title: "
-																+ msg.documents[1].title);
-										$("#api1")
-												.append(
-														" image: <img src='"+msg.documents[1].thumbnail+"'/>");
-										$("#api1")
-												.append(
-														"<br /><br /> title: "
-																+ msg.documents[2].title);
-										$("#api1")
-												.append(
-														"< image: <img src='"+msg.documents[2].thumbnail+"'/>");
-										$("#api1")
-												.append(
-														"<br /><br /> title: "
-																+ msg.documents[3].title);
-										$("#api1")
-												.append(
-														" image: <img src='"+msg.documents[3].thumbnail+"'/>");
-										$("#api1")
-												.append(
-														"<br /><br /> title: "
-																+ msg.documents[4].title);
-										$("#api1")
-												.append(
-														" image: <img src='"+msg.documents[4].thumbnail+"'/>");
-									});
-				</script>
+					.ajax(
+							{
+								type : "GET",
+								url : "https://dapi.kakao.com/v3/search/book?target=title",
+								dataType : "json",
+								data : {
+									query: bookname
+								},
+								headers : {
+									Authorization : "KakaoAK e5e613251210cc286e07c17499ed3047"
+								}
+							})
+					.done(
+							function(msg) {
+								$("#api1")
+										.append(
+												"<br /><br /> title: "
+														+ msg.documents[0].title);
+								$("#api1")
+										.append(
+												" image: <img src='"+msg.documents[0].thumbnail+"'/>");
+								$("#api1")
+										.append(
+												"<br /><br /> title: "
+														+ msg.documents[1].title);
+								$("#api1")
+										.append(
+												" image: <img src='"+msg.documents[1].thumbnail+"'/>");
+								$("#api1")
+										.append(
+												"<br /><br /> title: "
+														+ msg.documents[2].title);
+								$("#api1")
+										.append(
+												"< image: <img src='"+msg.documents[2].thumbnail+"'/>");
+								$("#api1")
+										.append(
+												"<br /><br /> title: "
+														+ msg.documents[3].title);
+								$("#api1")
+										.append(
+												" image: <img src='"+msg.documents[3].thumbnail+"'/>");
+								$("#api1")
+										.append(
+												"<br /><br /> title: "
+														+ msg.documents[4].title);
+								$("#api1")
+										.append(
+												" image: <img src='"+msg.documents[4].thumbnail+"'/>");
+							});
+				});
+				
+				
+				</script> -->
 
 			</div>
 			<div id="menu1" class="tab-pane fade">
