--- a/src/main/resources/templates/navigation/worldmap.html
+++ b/src/main/resources/templates/navigation/worldmap.html
@@ -3,6 +3,7 @@
 <head>
 {{> include/header}}
 <link rel="stylesheet" href="/css/map.css" type="text/css">
+<script src="/js/raphael.js"></script>
 </head>
 
 <body>
