--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -2,13 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 {{> include/header}}
-<link rel="stylesheet" href="/css/map.css" type="text/css">
 <script>
 
 	function submitFormReady() {
 		$("#searchButton").click(function(){
 			var bookname = $("#bookName").val();
-			alert(bookname);
 			$
 			.ajax(
 					{
@@ -30,35 +28,35 @@
 												+ msg.documents[0].title);
 						$("#api1")
 								.append(
-										" image: <img src='"+msg.documents[0].thumbnail+"'/>");
+										"	image: <img src='"+msg.documents[0].thumbnail+"'/>");
 						$("#api1")
 								.append(
 										"<br /><br /> title: "
 												+ msg.documents[1].title);
 						$("#api1")
 								.append(
-										" image: <img src='"+msg.documents[1].thumbnail+"'/>");
+										"	image: <img src='"+msg.documents[1].thumbnail+"'/>");
 						$("#api1")
 								.append(
 										"<br /><br /> title: "
 												+ msg.documents[2].title);
 						$("#api1")
 								.append(
-										"< image: <img src='"+msg.documents[2].thumbnail+"'/>");
+										"	image: <img src='"+msg.documents[2].thumbnail+"'/>");
 						$("#api1")
 								.append(
 										"<br /><br /> title: "
 												+ msg.documents[3].title);
 						$("#api1")
 								.append(
-										" image: <img src='"+msg.documents[3].thumbnail+"'/>");
+										"	image: <img src='"+msg.documents[3].thumbnail+"'/>");
 						$("#api1")
 								.append(
 										"<br /><br /> title: "
 												+ msg.documents[4].title);
 						$("#api1")
 								.append(
-										" image: <img src='"+msg.documents[4].thumbnail+"'/>");
+										"	image: <img src='"+msg.documents[4].thumbnail+"'/>");
 					});
 		});
 	}
@@ -91,7 +89,7 @@
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			 	<form>
 					<div class="input-group">
-						<input id = "bookName" type="text" class="form-control" placeholder="Search Books">
+						<input id = "bookName" type="text" value = "" class="form-control" placeholder="Search Books">
 						<div class="input-group-btn">
 							<button id = "searchButton" class="btn btn-default" type="button">
 								<i class="glyphicon glyphicon-search"></i>
