--- a/src/main/resources/templates/navigation/worldmap.html
+++ b/src/main/resources/templates/navigation/worldmap.html
@@ -4,6 +4,7 @@
 {{> include/header}}
 <link rel="stylesheet" href="/css/map.css" type="text/css">
 <script src="/js/raphael.js"></script>
+<script src="/js/svgMap.js"></script>
 </head>
 
 <body>
