--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -4,8 +4,8 @@
 {{> include/header}}
 <script src="/js/api.js"></script>
 </head>
-<body onclick = submitFormReady();>
-
+<!-- <body onclick = submitFormReady();> -->
+<body>
 	{{> include/navigation}}
 	<div class="container">
 		<h2>Dynamic Pills</h2>
