--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -14,7 +14,7 @@
 			for every tab and wrap them inside a div element with class
 			.tab-content.</p>
 		<ul class="nav nav-pills">
-			<li class="active"><a data-toggle="pill" href="#home">Home</a></li>
+			<li class="active"><a data-toggle="pill" href="#home">Book Search</a></li>
 			<li><a data-toggle="pill" href="#menu1">API 1</a></li>
 			<li><a data-toggle="pill" href="#menu2">API 2</a></li>
 			<li><a data-toggle="pill" href="#menu3">API 3</a></li>
@@ -22,7 +22,7 @@
 
 		<div class="tab-content">
 			<div id="home" class="tab-pane fade in active">
-				<h3>HOME</h3>
+				<h3>Book Search</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<form>
