--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 {{> include/header}}
-<script src="/js/api.js"></script>
+<script src="/js/bookSearchApi.js"></script>
 </head>
 <!-- <body onclick = submitFormReady();> -->
 <body>
