--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -14,7 +14,8 @@
 			for every tab and wrap them inside a div element with class
 			.tab-content.</p>
 		<ul class="nav nav-pills">
-			<li class="active"><a data-toggle="pill" href="#home">Book Search</a></li>
+			<li class="active"><a data-toggle="pill" href="#home">Book
+					Search</a></li>
 			<li><a data-toggle="pill" href="#menu1">API 1</a></li>
 			<li><a data-toggle="pill" href="#menu2">API 2</a></li>
 			<li><a data-toggle="pill" href="#menu3">API 3</a></li>
@@ -41,52 +42,20 @@
 				<article id="api1"></article>
 			</div>
 			<div id="menu1" class="tab-pane fade">
-				<h3>API 1</h3>
+				<h3>Image Search</h3>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 					laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<section id="map_section">
-					<article id="main_article">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-							Aenean imperdiet, lacus non tristique volutpat, metus dolor
-							varius dolor, eu venenatis justo lacus id ligula. Suspendisse
-							blandit mi sed metus vehicula, eu rutrum ante imperdiet. Sed sit
-							amet iaculis turpis, sit amet pulvinar nulla. Fusce eu accumsan
-							diam. Proin vitae auctor quam. Donec sed facilisis lectus. Nam ac
-							elit finibus, vulputate purus sed, venenatis arcu. Nulla at
-							commodo lectus. Etiam bibendum odio non mollis posuere. Aliquam
-							fermentum luctus felis at pharetra.</p>
-						<p>Nunc elementum rhoncus tempus. Aenean rutrum ex vitae odio
-							varius, ac vehicula nisl malesuada. Proin tincidunt dolor eu
-							tortor venenatis volutpat. Phasellus mollis blandit nulla, in
-							elementum mi commodo sit amet. Maecenas efficitur eleifend
-							luctus. Donec accumsan blandit est et aliquet. Praesent vitae
-							libero suscipit, finibus magna id, feugiat purus. Pellentesque
-							vitae elit sed dui aliquet rutrum vitae gravida ligula. Vivamus
-							consectetur, nunc eu sodales cursus, ante nunc hendrerit ex, ac
-							efficitur tortor arcu ac nisl. Aenean porttitor, diam at placerat
-							egestas, tellus lacus dictum diam, ut porttitor diam ante et
-							ipsum. Aenean porta justo a magna mollis sodales. Pellentesque
-							malesuada tempor malesuada. Etiam augue odio, cursus sodales
-							interdum mattis, pellentesque sed velit. Nam fermentum, ex nec
-							faucibus iaculis, nisi urna sollicitudin dui, at pulvinar nisi
-							nibh vitae ex. Nam viverra metus at bibendum malesuada. Nulla in
-							pharetra lacus.</p>
-						<p>Integer scelerisque urna quis iaculis fringilla. Donec
-							efficitur, neque quis semper gravida, ex tortor facilisis metus,
-							eget rutrum nulla nulla sit amet arcu. Cras eget lorem at felis
-							ornare aliquet nec id elit. Nulla facilisi. Vestibulum nec luctus
-							dolor. Quisque non volutpat nisi, non feugiat est. Nulla erat
-							quam, semper nec tortor in, sollicitudin ullamcorper ex. Donec
-							accumsan nulla dui, eu iaculis turpis bibendum in. Phasellus nibh
-							metus, placerat at rhoncus vitae, dignissim nec purus. Nulla non
-							aliquam neque. Nunc faucibus orci vitae suscipit molestie. Fusce
-							et leo sed purus mollis feugiat. Nunc diam quam, dapibus eu nisi
-							sed, accumsan commodo est. Vivamus nunc quam, suscipit nec ipsum
-							a, suscipit pretium tortor.</p>
-						</p>
-						<p>Converted SVG to JSON & Used random color by JavaScript.</p>
-					</article>
-				</section>
+				<form>
+					<div class="input-group">
+						<input id="imageName" type="text" value="" class="form-control"
+							placeholder="Search Images">
+						<div class="input-group-btn">
+							<button id="searchButton" class="btn btn-default" type="button">
+								<i class="glyphicon glyphicon-search"></i>
+							</button>
+						</div>
+					</div>
+				</form>
 			</div>
 			<div id="menu2" class="tab-pane fade">
 				<h3>API 2</h3>
