--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -18,7 +18,7 @@
 			<li class="active"><a data-toggle="pill" href="#home">Book
 					Search</a></li>
 			<li><a data-toggle="pill" href="#menu1">Image Search</a></li>
-			<li><a data-toggle="pill" href="#menu2">API 2</a></li>
+			<li><a data-toggle="pill" href="#menu2">Papago Translation</a></li>
 			<li><a data-toggle="pill" href="#menu3">API 3</a></li>
 		</ul>
 
@@ -60,7 +60,7 @@
 				<article id="api2"></article>
 			</div>
 			<div id="menu2" class="tab-pane fade">
-				<h3>API 2</h3>
+				<h3>Papago Translation</h3>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 					laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<section id="map_section">
