--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -18,7 +18,7 @@
 			<li class="active"><a data-toggle="pill" href="#home">Book
 					Search</a></li>
 			<li><a data-toggle="pill" href="#menu1">Image Search</a></li>
-			<li><a data-toggle="pill" href="#menu2">Papago Translation</a></li>
+			<li><a data-toggle="pill" href="#menu2">Naver Papago Translation</a></li>
 			<li><a data-toggle="pill" href="#menu3">Google API</a></li>
 		</ul>
 
