--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -19,7 +19,7 @@
 					Search</a></li>
 			<li><a data-toggle="pill" href="#menu1">Image Search</a></li>
 			<li><a data-toggle="pill" href="#menu2">Naver Papago Translation</a></li>
-			<li><a data-toggle="pill" href="#menu3">Google API</a></li>
+			<li><a data-toggle="pill" href="#menu3">the Google API</a></li>
 		</ul>
 
 		<div class="tab-content">
