--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -8,7 +8,7 @@
 	<div class="container" id="main">
 		<div class="col-md-6 col-md-offset-3">
 			<div class="panel panel-default content-main">
-				<form name="question" method="post" action="/users">
+				<form name="question" id="question" method="post" action="/users">
 					<div class="form-group">
 						<label for="userId">User ID</label> <input class="form-control"
 							id="userId" name="userId" placeholder="User ID" required>
@@ -26,7 +26,7 @@
 						<label for="email">Email</label> <input type="email"
 							class="form-control" id="email" name="email" placeholder="Email">
 					</div>
-					<button type="submit" class="btn btn-success clearfix pull-right" onclick="signupValidate();">Sign
+					<button type="button" class="btn btn-success clearfix pull-right" onclick="signupValidate();">Sign
 						Up</button>
 					<div class="clearfix" />
 				</form>
