--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -88,7 +88,7 @@
 					<li><a href="/users/loginForm" role="button"
 						data-toggle="tooltip" data-placement="top" title="Can Log In">Log
 							In</a></li>
-					<li><a href="/users/form" role="button" data-toggle="tooltip"
+					<li><a href="/users/signupForm" role="button" data-toggle="tooltip"
 						data-placement="top" title="Can make Accout">Sign Up</a></li>
 					{{/sessionedUser}} {{#sessionedUser}}
 					<li><a href="/users/logout" role="button">Log Out</a></li>
