--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -11,7 +11,7 @@
 			{{#errorMessage}}
 				<div class="alert alert-danger" role="alert">{{this}}</div>
 			{{/errorMessage}}
-				<form name="question" id="loginForm" method="post" action="/users/loginForm">
+				<form name="question" id="loginForm" method="post" action="/users/loginRequest">
 					<div class="form-group">
 						<label for="userId">User ID</label> <input class="form-control"
 							id="userId" name="userId" placeholder="User ID">
