--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -35,7 +35,7 @@
 							<li><a href="https://nice0001-angelo.github.io"
 								target="_blank">Blog</a></li>
 						</ul></li>
-					<li><a href="/users"><i class="glyphicon glyphicon-user"></i></a></li>
+					<li><a href="/users/list"><i class="glyphicon glyphicon-user"></i></a></li>
 				</ul>
 
 
