--- a/src/main/resources/templates/user/signupForm.html
+++ b/src/main/resources/templates/user/signupForm.html
@@ -8,7 +8,7 @@
 	<div class="container" id="main">
 		<div class="col-md-6 col-md-offset-3">
 			<div class="panel panel-default content-main">
-				<form name="question" id="signupRequest" method="post" action="/users/signRequest">
+				<form name="question" id="signupRequest" method="post" action="/users/signupRequest">
 					<div class="form-group">
 						<label for="userId">User ID</label> <input class="form-control"
 							id="userId" name="userId" placeholder="User ID" required>
