--- a/src/main/resources/templates/user/updateUserForm.html
+++ b/src/main/resources/templates/user/updateUserForm.html
@@ -9,7 +9,7 @@
 		<div class="col-md-6 col-md-offset-3">
 			<div class="panel panel-default content-main">
 				{{#user}}
-				<form name="question" method="post" action="/users/{{id}}">
+				<form name="question" method="post" action="/users/{{id}}/signUpdate">
 					<div class="form-group">
 						<label for="userId">User ID</label> <input class="form-control"
 							id="userId" name="userId" placeholder="User ID"
