--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -25,7 +25,7 @@
 							<td>{{userId}}</td>
 							<td>{{name}}</td>
 							<td>{{email}}</td>
-							<td><a href="/users/{{id}}/updateUserForm" class="btn btn-success"
+							<td><a href="/users/{{id}}/goUpdateUserForm" class="btn btn-success"
 								role="button">Update</a></td>
 						</tr>
 						{{/users}}
