--- a/src/main/resources/templates/qna/questionForm.html
+++ b/src/main/resources/templates/qna/questionForm.html
@@ -8,7 +8,7 @@
 	<div class="container" id="main">
 		<div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
 			<div class="panel panel-default content-main">
-				<form name="question" method="post" action="/questions">
+				<form name="question" method="post" action="/questions/createQuestion">
 					<div class="form-group">
 						<label for="title">Title</label> <input type="text"
 							class="form-control" id="title" name="title" placeholder="Title" />
