--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 					<li>
 						<div class="wrap">
 							<div class="main">
-								<strong class="subject"> <a href="/questions/{{id}}">{{title}}</a>
+								<strong class="subject"> <a href="/questions/{{id}}/showQuestion">{{title}}</a>
 								</strong>
 								<div class="auth-info">
 									<i class="icon-add-comment"></i> <span class="time">{{formattedCreateDate}}</span>
