--- a/src/main/resources/templates/qna/showQuestion.html
+++ b/src/main/resources/templates/qna/showQuestion.html
@@ -33,7 +33,7 @@
 							<div class="article-util">
 								<ul class="article-util-list">
 									<li><a class="link-modify-article"
-										href="/questions/{{id}}/form">Update</a></li>
+										href="/questions/{{id}}/goUpdateQuestionForm">Update</a></li>
 									<li>
 										<form class="form-delete" action="/questions/{{id}}/delete"
 											method="POST">
