--- a/src/main/resources/templates/qna/showQuestion.html
+++ b/src/main/resources/templates/qna/showQuestion.html
@@ -13,7 +13,7 @@
 					<h2 class="qna-title">{{title}}</h2>
 				</header>
 				<div class="content-main">
-					
+
 					<article class="article">
 						<div class="article-header">
 							<div class="article-header-thumb">
@@ -71,8 +71,8 @@
 										<ul class="article-util-list">
 											<li><a class="link-modify-article"
 												href="/answers/{{question.id}}/answers/{{id}}/form">Update</a></li>
-											<li>
-												<a class="link-Delete-article" href="/api/questions/{{question.id}}/answers/{{id}}">Delete</a>
+											<li><a class="link-Delete-article"
+												href="/api/questions/{{question.id}}/answers/{{id}}">Delete</a>
 											</li>
 										</ul>
 									</div>
@@ -95,7 +95,7 @@
 			</div>
 			{{/question}}
 		</div>
-			
+		{{> include/footer}}
 	</div>
 
 
@@ -126,6 +126,6 @@
 	</article>
 </script>
 
-{{> include/footer}}
+
 </body>
 </html>
