--- a/src/main/resources/templates/qna/updateQuestionForm.html
+++ b/src/main/resources/templates/qna/updateQuestionForm.html
@@ -20,7 +20,7 @@
 						<textarea name="contents" id="contents" rows="5"
 							class="form-control">{{contents}}</textarea>
 					</div>
-					<button type="submit" class="btn btn-success clearfix pull-right">Question</button>
+					<button type="submit" class="btn btn-success clearfix pull-right">Update Question</button>
 					<div class="clearfix" />
 				</form>
 				{{/question}}
