--- a/src/main/resources/templates/qna/showQuestion.html
+++ b/src/main/resources/templates/qna/showQuestion.html
@@ -35,7 +35,7 @@
 									<li><a class="link-modify-article"
 										href="/questions/{{id}}/goUpdateQuestionForm">Update</a></li>
 									<li>
-										<form class="form-delete" action="/questions/{{id}}/delete"
+										<form class="form-delete" action="/questions/{{id}}/deleteQuestion"
 											method="POST">
 											<button class="link-delete-article" type="submit">Delete</button>
 										</form>
