--- a/src/main/resources/templates/qna/showQuestion.html
+++ b/src/main/resources/templates/qna/showQuestion.html
@@ -72,6 +72,9 @@ function failFunc(xhr, textStatus, errorThrown){
 							</div>
 					</article>
 
+
+
+
 					<div class="qna-comment">
 						<div class="qna-comment-slipp">
 							<p class="qna-comment-count">
@@ -97,7 +100,7 @@ function failFunc(xhr, textStatus, errorThrown){
 									<div class="article-util">
 										<ul class="article-util-list">
 											<li><a class="link-modify-article"
-												href="/answers/{{question.id}}/answers/{{id}}/form">Update</a></li>
+												href="/answers/{{question.id}}/answers/{{id}}/goUpdateAnswerForm">Update</a></li>
 											<li><a class="link-Delete-article"
 												href="/api/questions/{{question.id}}/answers/{{id}}">Delete</a>
 											</li>
