--- a/src/main/resources/templates/qna/updateAnswerForm.html
+++ b/src/main/resources/templates/qna/updateAnswerForm.html
@@ -10,7 +10,7 @@
 			<div class="panel panel-default content-main">
 				{{#answer}}
 				<form class="answer-write" method="post"
-					action="/answers/{{question.id}}/answers/{{id}}/update">
+					action="/answers/{{question.id}}/answers/{{id}}/updateAnswer">
 					<div class="form-group" style="padding: 14px;">
 						<textarea class="form-control" placeholder="Update your status"
 							name="contents">{{contents}}</textarea>
@@ -22,8 +22,8 @@
 				{{/answer}}
 			</div>
 		</div>
+		{{> include/footer}}
 	</div>
 
-	{{> include/footer}}
 </body>
 </html>
