--- a/src/main/resources/templates/qna/showQuestion.html
+++ b/src/main/resources/templates/qna/showQuestion.html
@@ -24,9 +24,9 @@ $(document).ready(function(){
 });
 
 function failFunc(xhr, textStatus, errorThrown){
-	alert("fail");
-	alert("textStatus:"+textStatus);
-	alert("errorThrown:"+errorThrown);
+	alert("Please Login First");
+	//alert("textStatus:"+textStatus);
+	//alert("errorThrown:"+errorThrown);
 }
 
 function successFunc(resData){
