--- a/src/main/resources/templates/qna/showQuestion.html
+++ b/src/main/resources/templates/qna/showQuestion.html
@@ -111,14 +111,14 @@ function successFunc(resData){
 											<li><a class="link-modify-article"
 												href="/answers/{{question.id}}/answers/{{id}}/goUpdateAnswerForm">Update</a></li>
 											<li><a class="link-Delete-article"
-												href="/api/questions/{{question.id}}/answers/{{id}}">Delete</a>
+												href="/api/questions/{{question.id}}/answers/{{id}}/deleteAnswer">Delete</a>
 											</li>
 										</ul>
 									</div>
 								</article>
 								{{/answers}}
 								<form class="answer-write" method="post"
-									action="/api/questions/{{id}}/answers">
+									action="/api/questions/{{id}}/answers/createAnswer">
 									<div class="form-group" style="padding: 14px;">
 										<textarea class="form-control"
 											placeholder="Update your status" name="contents" id="contents"></textarea>
