--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -53,7 +53,7 @@ function successFunc(resData){
 						</tr>
 					</thead>
 					<tbody>
-						{{#users}}
+						<!-- {{#users}} -->
 						<tr>
 							<th scope="row">{{id}}</th>
 							<td>{{userId}}</td>
@@ -62,7 +62,7 @@ function successFunc(resData){
 							<td><a href="/users/{{id}}/goUpdateUserForm" class="btn btn-success"
 								role="button">Update</a></td>
 						</tr>
-						{{/users}}
+						<!-- {{/users}} -->
 					</tbody>
 				</table>
 			</div>
