--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -23,11 +23,9 @@
 	function successFunc(resData) {
 		alert("success")
 		var addHtml = "";
-		alert(JSON.stringify(resData[0].name));
-	//alert(JSON.stringify(resData.users.name));
+		//alert(JSON.stringify(resData[0].name));
 		var usersArry = resData.users;
 		for (var i = 0; i < resData.length; i++) {
-			//alert(JSON.stringify(resData[i].name));
 			addHtml += "<tr><td>" + resData[i].id + "</td>";
 			addHtml += "<td>" + resData[i].userId + "</td>";
 			addHtml += "<td>" + resData[i].name + "</td>";
@@ -35,9 +33,6 @@
 			addHtml += "<td><a href='/users/"+resData[i].id+"/goUpdateUserForm'	class='btn btn-success' role='button'>Update</a></td></tr>";
 		}
 		$("#display").html(addHtml);
-		//history.go(0);
-		//alert("success");
-		//alert(JSON.stringify(resData));
 	}
 </script>
 </head>
@@ -57,17 +52,17 @@
 							<th></th>
 						</tr>
 					</thead>
-					<tbody id = "display">
-						<!-- {{#users}} -->
-<!-- 						<tr>
-  							<th scope="row">{{id}}</th>
+					<tbody id="display">
+<!-- 						{{#users}}
+						<tr>
+							<th scope="row">{{id}}</th>
 							<td>{{userId}}</td>
 							<td>{{name}}</td>
 							<td>{{email}}</td>
 							<td><a href="/users/{{id}}/goUpdateUserForm"
 								class="btn btn-success" role="button">Update</a></td>
-						</tr> -->
-						<!-- {{/users}} -->
+						</tr>
+						{{/users}} -->
 					</tbody>
 				</table>
 			</div>
