--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -79,9 +79,9 @@
 					<li><a href="/foodblog" data-toggle="tooltip"
 						data-placement="top" title="FoodBlog">FoodBlog</a></li>
 					<li><a href="/worldmap" data-toggle="tooltip"
-						data-placement="top" title="WorldMap">World Map(Under Construction)</a></li>
+						data-placement="top" title="WorldMap">World Map</a></li>
 					<li><a href="/api" data-toggle="tooltip"
-						data-placement="top" title="API">API(Under Construction)</a></li>
+						data-placement="top" title="API">Using Public API</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					{{^sessionedUser}}
