--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 {{> include/header}}
-<title>Angelo</title>
+<title>Jimmy</title>
 <link rel="stylesheet" href="/css/about.css" type="text/css">
 <script src="/js/jquery-2.2.0.min.js"></script>
 </head>
@@ -63,10 +63,10 @@
 												alt="direct connected with subway Station">
 										</div>
 										<div class="text">
-											<p1>5162 Yonge St, North York</p1>
+											<p1>33 Empress Ave, North York</p1>
 											<p1>Near by North York Centre Station</p1>
 											<p1>I am work in North York, Toronto</p1>
-											<p1>I am work for JT Chinae Branch of Toronto</p1>
+											<p1>I am work for Avantisnet.com</p1>
 										</div>
 									</div>
 								</section>
