--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -3,7 +3,7 @@
 		<div class="col-md-12">
 			<div class="navbar-header">
 
-				<a href="/" class="navbar-brand">Jin Navi</a>
+				<a href="/" class="navbar-brand">Jimmy Navi</a>
 				<button type="button" class="navbar-toggle" data-toggle="collapse"
 					data-target="#navbar-collapse1">
 					<i class="glyphicon glyphicon-search"></i>
@@ -26,7 +26,7 @@
 					<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
 							class="glyphicon glyphicon-bell"></i></a>
 						<ul class="dropdown-menu">
-							<li><a href="http://angelo.co.kr" target="_blank">Angelo</a></li>
+							<li><a href="http://angelo.co.kr" target="_blank">Jimmy</a></li>
 							<li><a
 								href="https://www.linkedin.com/in/jinhyun-nam-406542173"
 								target="_blank">Linkedin</a></li>
