--- a/src/main/resources/templates/jinhyun/profile.html
+++ b/src/main/resources/templates/jinhyun/profile.html
@@ -19,7 +19,7 @@
 							</a>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">JINHYUN NAM</h4>
+							<h4 class="media-heading">Jimmy Nam</h4>
 							<p>
 							<a href="#" class="btn btn-xs btn-default"> 
 							<span class="glyphicon glyphicon-envelope"> 
