--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -1,7 +1,7 @@
 <div>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
-<title>JINHYUN Spring Boot Alpha</title>
+<title>Jimmy Nam's Web page</title>
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="/css/bootstrap.min.css" rel="stylesheet">
