--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -32,7 +32,7 @@
 							<li><a href="https://github.com/nice0001-angelo"
 								target="_blank">Github</a></li>
 							<li><a href="https://nice0001-angelo.github.io"
-								target="_blank">BigData with Python(BLOG)</a></li>
+								target="_blank">BigData with Python(Blorrer))</a></li>
 						</ul></li>
 					<li><a href="/users/userList"><i class="glyphicon glyphicon-user"></i></a></li>
 				</ul>
