--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -75,6 +75,8 @@
 						title="Main Page">Home</a></li>
 					<li><a href="/about" data-toggle="tooltip"
 						data-placement="top" title="About">About</a></li>
+					<li><a href="/about1" data-toggle="tooltip"
+						data-placement="top" title="About1">About1</a></li>
 					<li><a href="/foodblog" data-toggle="tooltip"
 						data-placement="top" title="FoodBlog">FoodBlog</a></li>
 					<li><a href="/worldmap" data-toggle="tooltip"
