--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 {{> include/header}}
-<title>Jimmy</title>
+<title>Jimmy~!</title>
 <link rel="stylesheet" href="/css/about.css" type="text/css">
 <script src="/js/jquery-2.2.0.min.js"></script>
 </head>
