--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -21,7 +21,7 @@
 					</h3>
 					<br />
 					<ul class="nav nav-pills nav-stacked">
-						<li class="active"><a href="#no1">Who am I</a></li>
+						<li class="active"><a href="#no1">Who am I~!</a></li>
 						<li class="active"><a href="#no2">Where am I</a></li>
 						<li class="active"><a href="#no3">What am I</a></li>
 						<li class="active"><a href="#no4">Portfolio</a></li>
